--- a/index.html
+++ b/index.html
@@ -1,164 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://magnogen.net/src/favicon.png">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Home | Magnogen</title>
-    <meta name="description" content="My Little Corner of the Internet">
-    <base target="_blank">
-    <script src="https://src.magnogen.net/dom.js"></script>
-    <script src="chroma.js"></script>
-    <script src="colour.js"></script>
+    <link rel="stylesheet" type="text/css" href="style2.css">
+    <meta charset="utf-8" />
   </head>
   <body>
     <header>
-      <h1>Magnogen.net</h1>
-      <span id="tagline">Hi, I'm Mag</span>
+      Magnogen.net
     </header>
     <main>
-      <h2>Socials</h2>
-      <table>
-        <tr>
-          <td>GitHub</td>
-          <td><a href="https://github.com/Magnogen">Magnogen</a></td>
-        </tr>
-        <tr>
-          <td>YouTube</td>
-          <td><a href="https://www.youtube.com/@Magnogen">Magnogen</a></td>
-        </tr>
-        <tr>
-          <td>Itch</td>
-          <td><a href="https://magnogen.itch.io">magnogen.itch.io</a></td>
-        </tr>
-        <tr>
-          <td>Esolangs.org</td>
-          <td><a href="https://esolangs.org/wiki/User:Magnogen">User:Magnogen</a></td>
-        </tr>
-      </table>
-      
-      <section id="about">
-        <h2>About Me</h2>
-        <p>
-          Hi! I'm Mag, a developer passionate about creating fun and useful projects.
-          I specialize in JavaScript and enjoy exploring new tech and creative ideas.
-        </p>
-      </section>
-      
-      <h2>My Stuff</h2>
-      <div class="cards">
-        <article>
-          <header><h3>Libraries</h3></header>
-          <main>
-            A bunch of modular libraries I tend to use in my projects.
-            <a href="https://src.magnogen.net">Show Me</a>
-            <a href="https://github.com/Magnogen/source">Sauce (GitHub)</a>
-          </main>
-        </article>
-        <article>
-          <header><h3>Palbo (Palette Book)</h3></header>
-          <main>
-            A site for storing colours.
-            It was requested by a friend of mine, and I thought it turned out pretty well.
-            <a href="https://magnogen.net/palbo">Show Me</a>
-            <a href="https://github.com/Magnogen/palbo">Sauce (GitHub)</a>
-          </main>
-        </article>
-        <article>
-          <header><h3>Aberratium</h3></header>
-          <main>
-            My Acerola Jam 0 submission.
-            <a href="https://magnogen.itch.io/aberratium">Show Me (Itch)</a>
-            <a href="https://github.com/Magnogen/aberratium">Sauce (GitHub)</a>
-          </main>
-        </article>
-        <article>
-          <header><h3>Fractal Explorer</h3></header>
-          <main>
-            Explore fractals like the Mandelbrot Set or Julia Sets.
-            Written in JS.
-            <a href="https://magnogen.net/fractalexplorer">Show Me</a>
-            <a href="https://github.com/Magnogen/fractalexplorer">Sauce (GitHub)</a>
-          </main>
-        </article>
-        <article>
-          <header><h3>Click</h3></header>
-          <main>
-            Clicky clicky click click.
-            <a href="https://magnogen.net/click">Show Me</a>
-            <a href="https://github.com/Magnogen/click">Sauce (GitHub)</a>
-          </main>
-        </article>
-        <article>
-          <header><h3>Weirdle</h3></header>
-          <main>
-            Wordle practice.
-            <a href="https://magnogen.net/weirdle">Show Me</a>
-            <a href="https://github.com/Magnogen/weirdle">Sauce (GitHub)</a>
-          </main>
-        </article>
-        <article>
-          <header><h3>Sand</h3></header>
-          <main>
-            A browser-based cellular automata written in JS.
-            You can play with a bunch of elements, from sand and water to fire and lava.
-            <a href="https://magnogen.net/sand">Show Me</a>
-            <a href="https://github.com/Magnogen/sand">Sauce (GitHub)</a>
-          </main>
-        </article>
-        <article>
-          <header><h3>Graidients</h3></header>
-          <main>
-            Generate gradients and patterns using neural networks.
-            Written in JS.
-            <a href="https://magnogen.net/Graidients">Show Me</a>
-            <a href="https://github.com/Magnogen/Graidients">Sauce (GitHub)</a>
-          </main>
-        </article>
-        <article>
-          <header><h3>Dots</h3></header>
-          <main>
-            Play with some jiggly dots.
-            Written in JS.
-            <a href="https://magnogen.net/dots">Show Me</a>
-            <a href="https://github.com/Magnogen/dots">Sauce (GitHub)</a>
-          </main>
-        </article>
-        <article>
-          <header><h3>Primes</h3></header>
-          <main>
-            Prime numbers go brr.
-            <a href="https://magnogen.net/primes">Show Me</a>
-            <a href="https://github.com/Magnogen/primes">Sauce (GitHub)</a>
-          </main>
-        </article>
-        <article>
-          <header><h3>Flood</h3></header>
-          <main>
-            A browser-based colourful flood-fill algorithm written in JS.
-            <a href="https://magnogen.net/flood">Show Me</a>
-            <a href="https://github.com/Magnogen/flood">Sauce (GitHub)</a>
-          </main>
-        </article>
-        <article>
-          <header><h3>Shadering</h3></header>
-          <main>
-            Hm yes, I know WebGL.
-            Really basic GLSL shader - noise, domain warping, etc.
-            <a href="https://magnogen.net/shadering">Show Me</a>
-            <a href="https://github.com/Magnogen/shadering">Sauce (GitHub)</a>
-          </main>
-        </article>
-        <article>
-          <header><h3>Triangles</h3></header>
-          <main>
-            Just a couple o' triangles.
-            <a href="https://magnogen.net/triangles">Show Me</a>
-            <a href="https://github.com/Magnogen/triangles">Sauce (GitHub)</a>
-          </main>
-        </article>
-      </div>
+      <a href="https://src.magnogen.net">
+        <img src="https://magnogen.net/img/libraries.png" alt="libraries.png">
+        <span>Libraries</span>
+      </a>
+      <a href="https://magnogen.net/palbo">
+        <img src="https://magnogen.net/img/palbo.png" alt="palbo.png">
+        <span>Palbo</span>
+      </a>
+      <a href="https://magnogen.net/aberratium">
+        <img src="https://magnogen.net/img/aberratium.png" alt="aberratium.png">
+        <span>Aberratium</span>
+      </a>
+      <a href="https://magnogen.net/fractalexplorer">
+        <img src="https://magnogen.net/img/fractalexplorer.png" alt="fractalexplorer.png">
+        <span>Fractal Explorer</span>
+      </a>
+      <a href="https://magnogen.net/penrose">
+        <img src="https://magnogen.net/img/penrose.png" alt="penrose.png">
+        <span>Penrose</span>
+      </a>
+      <a href="https://magnogen.net/click">
+        <img src="https://magnogen.net/img/click.png" alt="click.png">
+        <span>Click</span>
+      </a>
+      <a href="https://magnogen.net/shapesniper">
+        <img src="https://magnogen.net/img/shapesniper.png" alt="shapesniper.png">
+        <span>Shape Sniper</span>
+      </a>
+      <a href="https://magnogen.net/cnndsd">
+        <img src="https://magnogen.net/img/cnndsd.png" alt="cnndsd.png">
+        <span>CNNDSD</span>
+      </a>
+      <a href="https://magnogen.net/weirdle">
+        <img src="https://magnogen.net/img/weirdle.png" alt="weirdle.png">
+        <span>Weirdle</span>
+      </a>
+      <a href="https://magnogen.net/sand">
+        <img src="https://magnogen.net/img/sand.png" alt="sand.png">
+        <span>Sand</span>
+      </a>
+      <a href="https://magnogen.net/graidients">
+        <img src="https://magnogen.net/img/graidients.png" alt="graidients.png">
+        <span>Graidients</span>
+      </a>
+      <a href="https://magnogen.net/dots">
+        <img src="https://magnogen.net/img/dots.png" alt="dots.png">
+        <span>Dots</span>
+      </a>
+      <a href="https://magnogen.net/primes">
+        <img src="https://magnogen.net/img/primes.png" alt="primes.png">
+        <span>Primes</span>
+      </a>
+      <a href="https://magnogen.net/flood">
+        <img src="https://magnogen.net/img/flood.png" alt="flood.png">
+        <span>Flood</span>
+      </a>
+      <a href="https://magnogen.net/shadering">
+        <img src="https://magnogen.net/img/shadering.png" alt="shadering.png">
+        <span>Shadering</span>
+      </a>
+      <a href="https://magnogen.net/triangles">
+        <img src="https://magnogen.net/img/triangles.png" alt="triangles.png">
+        <span>Triangles</span>
+      </a>
     </main>
   </body>
 </html>
